chore: work in process - reorganizing stuff

--- a/tests/Soil.Lang.Tests/Soil.Lang.Tests.csproj
+++ b/tests/Soil.Lang.Tests/Soil.Lang.Tests.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -22,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\src\Kool.Lang\Kool.Lang.csproj" />
+        <ProjectReference Include="..\..\src\Soil.Lang\Soil.Lang.csproj" />
     </ItemGroup>
 
 </Project>
